--- a/app/src/main/res/xml/file_paths.xml
+++ b/app/src/main/res/xml/file_paths.xml
@@ -2,6 +2,6 @@
 <paths xmlns:android="http://schemas.android.com/apk/res/android">
     <external-files-path
         name="my_images"
-        path="Android/data/com.example.photogallery/files/Pictures"
+        path="Pictures"
     />
 </paths>
