--- a/app/src/main/res/layout/activitysearch.xml
+++ b/app/src/main/res/layout/activitysearch.xml
@@ -78,7 +78,7 @@
         android:layout_marginTop="180dp"
         android:layout_marginEnd="0dp"
         android:ems="10"
-        android:inputType="numberDecimal"
+        android:inputType="numberSigned|numberDecimal"
         android:textSize="24sp" />
 
     <EditText
@@ -89,7 +89,7 @@
         android:layout_alignParentEnd="true"
         android:layout_marginEnd="0dp"
         android:ems="10"
-        android:inputType="numberDecimal"
+        android:inputType="numberSigned|numberDecimal"
         android:textSize="24sp" />
 
     <TextView
