Solved all the usablitily and performance issues in code flagged by lint.

--- a/app/src/main/res/layout/activitysearch.xml
+++ b/app/src/main/res/layout/activitysearch.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -11,7 +10,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignStart="@+id/btnCancel"
-        android:text="Date"
+        android:text="@string/date"
         android:textSize="30sp" />
 
     <TextView
@@ -20,7 +19,7 @@
         android:layout_height="wrap_content"
         android:layout_alignStart="@+id/btnCancel"
         android:layout_marginStart="0dp"
-        android:text="Date"
+        android:text="@string/date"
         android:textSize="30sp" />
 
     <TextView
@@ -31,11 +30,12 @@
         android:layout_alignBottom="@+id/etFromDateTime"
         android:layout_marginStart="0dp"
         android:layout_marginBottom="0dp"
-        android:text="From: "
+        android:text="@string/from"
         android:textSize="24sp" />
 
     <EditText
         android:id="@+id/etToDateTime"
+        android:labelFor="@id/etToDateTime"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignBaseline="@+id/tvToDateTime"
@@ -43,7 +43,8 @@
         android:layout_marginEnd="0dp"
         android:ems="10"
         android:inputType="date"
-        android:textSize="24sp" />
+        android:textSize="24sp"
+        android:autofillHints="" />
 
     <TextView
         android:id="@+id/tvToDateTime"
@@ -53,7 +54,7 @@
         android:layout_alignParentTop="true"
         android:layout_marginStart="0dp"
         android:layout_marginTop="96dp"
-        android:text="To: "
+        android:text="@string/to"
         android:textSize="24sp" />
 
     <EditText
@@ -66,11 +67,13 @@
         android:layout_marginEnd="0dp"
         android:ems="10"
         android:inputType="date"
-        android:textSize="24sp" />
+        android:textSize="24sp"
+        android:autofillHints="" />
 
 
     <EditText
         android:id="@+id/etLatitude"
+        android:labelFor="@id/etToDateTime"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
@@ -79,10 +82,12 @@
         android:layout_marginEnd="0dp"
         android:ems="10"
         android:inputType="numberSigned|numberDecimal"
-        android:textSize="24sp" />
+        android:textSize="24sp"
+        android:autofillHints="" />
 
     <EditText
         android:id="@+id/etLongitude"
+        android:labelFor="@id/etToDateTime"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignBaseline="@+id/tvLongitude"
@@ -90,7 +95,8 @@
         android:layout_marginEnd="0dp"
         android:ems="10"
         android:inputType="numberSigned|numberDecimal"
-        android:textSize="24sp" />
+        android:textSize="24sp"
+        android:autofillHints="" />
 
     <TextView
         android:id="@+id/tvLongitude"
@@ -100,7 +106,7 @@
         android:layout_alignParentTop="true"
         android:layout_marginStart="0dp"
         android:layout_marginTop="240dp"
-        android:text="Longitude: "
+        android:text="@string/longitude"
         android:textSize="24sp" />
 
     <TextView
@@ -111,11 +117,11 @@
         android:layout_alignBottom="@+id/etLatitude"
         android:layout_marginStart="0dp"
         android:layout_marginBottom="0dp"
-        android:text="Latitude: "
+        android:text="@string/latitude"
         android:textSize="24sp" />
 
     <TextView
-        android:id="@+id/tvKeywords" android:text="Keywords: "
+        android:id="@+id/tvKeywords" android:text="@string/keywords"
         android:layout_width="wrap_content" android:layout_height="wrap_content"
         android:layout_alignStart="@+id/tvFromDateTime" android:layout_centerVertical="true"
         android:textSize="24sp" />
@@ -123,14 +129,16 @@
         android:id="@+id/etKeywords" android:layout_width="wrap_content"
         android:layout_height="wrap_content" android:layout_alignStart="@+id/go"
         android:layout_centerVertical="true" android:ems="10"
-        android:textSize="24sp" />
+        android:textSize="24sp" android:labelFor="@id/etToDateTime"
+        android:autofillHints=""
+        android:inputType="text" />
     <Button
-        android:id="@+id/btnCancel" android:text="Cancel" android:onClick="cancel"
+        android:id="@+id/btnCancel" android:text="@string/cancel" android:onClick="cancel"
         android:layout_width="wrap_content" android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true" android:layout_marginRight="55dp"
+        android:layout_alignParentBottom="true"
         android:layout_marginEnd="55dp" />
     <Button
-        android:id="@+id/go"  android:onClick="go" android:text="Go"
+        android:id="@+id/go"  android:onClick="go" android:text="@string/go"
         android:layout_width="wrap_content" android:layout_height="wrap_content"
         android:layout_alignParentEnd="true" android:layout_alignTop="@+id/btnCancel"
         android:layout_marginEnd="128dp" />
